Viva version before corrections

--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -1,18 +1,18 @@
 \chapter{Conclusive Summary}
 \label{chap:chap8}
 
-After nearly a century long development of General Relativity and Quantum Theory, we have arrived at understanding the fabric of universe through two leading approaches; looking at the universe through the lens of General Relativity---were gravitational influences of large structures are examined, and through Quantum Theory---by examining the sub-atomic microcosm of particles, primarily through the Standard Model. In the standard $\Lambda$CDM model of cosmology, the elementary particles of the SM constitute approximately 15\% of the matter-density of the universe, with the remaining 85\%, although gravitationally present, the particle nature of which remains a mystery. There has been many theoretical attempts in proposing new paradigms to explain the nature of dark matter, most prominently through the introduction of new particles beyond the Standard Model. The weakly interacting massive particle (WIMP) hypothesis remains as one of the most promising candidates, where such particles are thermally produced in the early universe with the right relic abundance. 
+After nearly a century long development of General Relativity and Quantum Theory, we have arrived at understanding the fabric of the universe through two leading approaches; looking at the universe through the lens of General Relativity---were gravitational influences of large structures are examined, and through Quantum Theory---by examining the sub-atomic microcosm of particles, primarily through the Standard Model. In the standard $\Lambda$CDM model of cosmology, the elementary particles of the SM constitute approximately 15\% of the matter-density of the universe, with the remaining 85\%, although gravitationally present, remains a mystery. There have been many theoretical attempts in proposing new paradigms to explain the nature of dark matter, most prominently through the introduction of new particles beyond the Standard Model. The weakly interacting massive particle (WIMP) hypothesis remains as one of the most promising candidates, where such particles are thermally produced in the early universe with the right relic abundance. 
 
 Over the past few decades, a magnitude of approaches has been formulated in  searching for this elusive particle; with indirect searches looking for excess radiation in the Galactic Center, through \gamma-ray observations; the creation of such particles in particle colliders, and through direct detection of WIMP-nucleon scattering. The LUX-ZEPLIN (LZ) experiment at its core is a second-generation dual-phase liquid xenon detector in search for dark matter. Currently in the final stages of construction, with data taking set to begin in late 2020, LZ will utilise on 10 tonnes of LXe, with a 5.6 tonne fiducial volume to search for galactic dark matter; designed to maximize target mass and exposure, while achieving ultra-low radioactivity and active monitoring of residual backgrounds. The detector is equipped with two distinct veto systems; the outer detector scintillation system, designed to veto neutrons and \gamma{}-rays originating from radioactive impurities in material immediately adjacent to the TPC, and the LXe skin system, instrumented with VUV sensitive PMTs to serve as a scintillation-only veto detector, highly effective for \gamma{}-rays originating from surrounding material---both of which serve to lower the backgrounds in the WIMP search region of interest. Furthermore, to go beyond the current world-leading limits on WIMP search results and in maximising the discovery potentiality of LZ, the material-makeup of the LZ experiment was held to most stringent radio-purity requirements. 
 
-Every single event within a low-background experiment is of critical importance for the search for dark matter. The LZ radioactivity and cleanliness control programs, detailed in \cite{lz_screening}, was designed to understand the origin and the implications of every known background source that may appear in the WIMP and other search regions of interest. Majority of these background sources are naturally occurring radioactive species, emitting \gamma{}-rays, electrons or \alpha{}-particles. Once detector material is selected and the environment of the detector is set, such backgrounds a \textit{fixed} in nature. Beyond the \textit{fixed contaminants}, \textit{surface contaminants} through dust, material residue and radiogenic plate-out, along with natural \textit{xenon contaminants}, such as \KrEF, combine to constitute all of the material and cleanliness driven backgrounds. LZ has developed and deployed extensive material screening and cleanliness techniques, working in coherence, to select some of the most radio-pure material to-date. This was achieved through the use of high-purity germanium spectroscopy, inductively-coupled plasma mass spectrometry, radon emanation screening and surface cleanliness protocols. Furthermore, an experiment was deployed to determine the \gamma{}-ray background in the Davis cavern, examining the impact of environmental \gamma{}-rays for the WIMP and higher energy searches. The projected background events from \textit{laboratory \& cosmogenics} and \textit{detector \& surface contaminants} lead to a total of 54 ER and 0.52 NR events within a 1000 live day run for the WIMP selection criteria and energy region of interest.
+Every single event within a low-background experiment is of critical importance for the search for dark matter. The LZ radioactivity and cleanliness control programs, detailed in \cite{lz_screening}, were designed to understand the origin and the implications of every known background source that may appear in the WIMP and other search regions of interest. Majority of these background sources are naturally occurring radioactive species, emitting \gamma{}-rays, electrons or \alpha{}-particles. Once detector material is selected and the environment of the detector is set, such backgrounds are \textit{fixed} in nature. Beyond the \textit{fixed contaminants}, \textit{surface contaminants} through dust, material residue and radiogenic plate-out, along with natural \textit{xenon contaminants}, such as \KrEF, combine to constitute all of the material and cleanliness driven backgrounds. LZ has developed and deployed extensive material screening and cleanliness techniques, working in unison, to select some of the most radio-pure material to-date. This was achieved through the use of high-purity germanium spectroscopy, inductively-coupled plasma mass spectrometry, radon emanation screening and surface cleanliness protocols. Furthermore, an experiment was deployed to determine the \gamma{}-ray background in the Davis cavern, examining the impact of environmental \gamma{}-rays for the WIMP and higher energy searches. The projected background events from \textit{laboratory \& cosmogenics} and \textit{detector \& surface contaminants} lead to a total of 54 ER and 0.52 NR events within a 1000 live day run for the WIMP selection criteria and energy region of interest.
 
-With rapid improvements across material and cleanliness driven backgrounds, radon emanation, previously sub-dominant in dark matter searches, has emerged to be the most dominant background source in LZ. Background from radon emanation primarily arises from the ground- to ground-state \beta{}-emission from the \PbTOF{} progeny of the \RnTTT{} sub-chain, resulting in a uniform ER background within the LXe. The UCL radon emanation system was used extensively along with three other radon facilities to screening for and select low-radon emanating materials and components. One of the leading results from the UCL measurements was the higher-than-expected radon emanation from titanium; estimated to contribute $33.6\pm3.6$ mBq to the total warm LZ emanation rate of $\sim60$ mBq. Furthermore, although radon emanation is the most dominant background, almost all measurements are conducted on fractional material pieces and under room temperature; failing to simulate operational conditions. As a result, to construct an accurate projection, both small-scale and large-scale measurements were considered. The comparison between large-scale and bottom-up ICV measurements resulted in a remarkably good agreement, with $46.1^{+4.0}_{-3.8}$ mBq and $48.5^{+5.9}_{-6.0}$ mBq, respectively. Enumerating the outcomes of the sub-system wide measurements result in a total warm emanation rate of 60.4+4.2 mBq. The radon removal system developed for LZ and temperature suppression factors from literature was used to estimate the operational radon emanation rate to within 11.0--21.6 mBq, with the projected activity set to 18.1 mBq for the entire 10 tonnes of LXe. 
+With rapid improvements across material and cleanliness driven backgrounds, radon emanation, previously sub-dominant in dark matter searches, has emerged to be the most dominant background source in LZ. Background from radon emanation primarily arises from the ground- to ground-state \beta{}-emission from the \PbTOF{} progeny of the \RnTTT{} sub-chain, resulting in a uniform ER background within the LXe. The UCL radon emanation system was used extensively along with three other radon facilities, screening for and selecting low-radon emanating materials and components. One of the leading results from the UCL measurements was the higher-than-expected radon emanation from titanium; estimated to contribute $33.6\pm3.6$ mBq to the total warm LZ emanation rate of $\sim60$ mBq. Furthermore, although radon emanation is the most dominant background, almost all measurements are conducted on fractional material pieces and under room temperature; failing to simulate operational conditions. As a result, to construct an accurate projection, both small-scale and large-scale measurements were considered. The comparison between large-scale and bottom-up ICV measurements resulted in a remarkably good agreement, with $46.1^{+4.0}_{-3.8}$ mBq and $48.5^{+5.9}_{-6.0}$ mBq, respectively. Enumerating the outcomes of the sub-system wide measurements result in a total warm emanation rate of 60.4+4.2 mBq. The radon removal system developed for LZ and temperature suppression factors from literature was used to estimate the operational radon emanation rate to within 11.0--21.6 mBq, with the projected activity set to 18.1 mBq for the entire 10 tonnes of LXe. 
 
 The LZ detector simulation package, \textsc{BACCARAT}, was used with \textsc{NEST}, to simulate the response of backgrounds in the WIMP region of interest to examine the total number of expected backgrounds. A statistical inference framework, \textsc{LZstats}, was further developed and used to study the sensitivity and discovery potential of the experiment to WIMP dark matter for a variety of background scenarios. A cut-and-count analysis was used to estimate the background rates from significant contributors in a 1000 live day run and a 5.6 tonne fiducial mass. The ER and NR counts for a region of interest relevant to a 40 GeV/c\squared{} WIMP---approximately 1.5–6.5 keV for ERs and 6–30 keV for NRs, revealed that almost 70\% of all ER events are as a direct result of radon emanation. An 11-component background model was constructed to evaluate the impact of increased radon emanation levels on the SI WIMP sensitivity and discovery potential. Assuming the best case and worse case scenarios of 11.0 mBq and 60.4 mBq of radon; the 90\% CL sensitivity was shown to vary from a cross section $1.34\times10^{-48} \; \MathText{cm}^{2}$ to $1.76\times10^{-48} \; \MathText{cm}^{2}$; although significant, the increase is substantially slow over the range of possible radon scenarios, with the median 90\% CL limit staying well below the LZ requirement of $3.0\times10^{-48} \; \MathText{cm}^{2}$. Furthermore, the projected 90\% CL sensitivity cross section of a SI WIMP-nucleon, assuming a projected radon activity of 18.1 mBq, was determined to be $1.43\times10^{-48} \; \MathText{cm}^{2}$ for a WIMP mass of 40 GeV/c\squared{}. Moreover, the median 3\sigma  discovery significance was determined to occur at $3.4\times10^{-48} \; \MathText{cm}^{2}$. 
 
-Despite the best efforts, G2 dual-phase LXe detectors, soon to go online, are projected to reach SI-WIMP-nucleon sensitivities of  $\sim1.4\times10^{-48} \; \MathText{cm}^{2}$ at a 90\% CL, leaving a significant amount of the parameter space prior to the cosmic neutrino floor unexplored. To examine the necessary background rates and to explore the potentiality of probing down to the neutrino floor, a G3 toy experiment was envisioned. A 70 tonne LXe detector, similar to LZ, with an active fiducial volume of 60 tonnes was used; assuming the same spectral background expectation to that of the LZ detector for the WIMP region of interest. With improvements on screening and cleanliness techniques and a much better understanding of radon emanation at operational conditions; a 1/10 reduction factor was assumed on all detector related backgrounds (including Det. + Lab. + Cosmo. + Surf.) and radon emanation rates. A PLR analysis was constructed, and the SI WIMP cross section at a 90\% confidence level was evaluated for WIMP masses ranging from 5 GeV/c\squared{} up to 20,000 GeV/c\squared{}. The best projected sensitivity achieved for the toy G3 detector with the assumed background scaling and an exposure of 300 tonne $\times$ years was $1.2\times10^{-49} \; \MathText{cm}^{2}$ for a WIMP mass of 40 GeV/c\squared{}. With this sensitivity, the remaining parameter space that G2 experiments will fail to examine above the coherent scattering of neutrinos from astrophysical sources is comfortably reached.
+Despite the best efforts, G2 dual-phase LXe detectors, soon to go online, are projected to reach SI-WIMP-nucleon sensitivities of  $\sim1.4\times10^{-48} \; \MathText{cm}^{2}$ at a 90\% CL, leaving a significant amount of the parameter space prior to the cosmic neutrino floor unexplored. To examine the necessary background rates and to explore the potentiality of probing down to the neutrino floor, a G3 toy experiment was envisioned. A 70 tonne LXe detector, similar to LZ, with an active fiducial volume of 60 tonnes was used; assuming the same spectral background expectation to that of the LZ detector for the WIMP region of interest. With improvements on screening and cleanliness techniques and a much better understanding of radon emanation at operational conditions; a 1/10 reduction factor was assumed on all detector related backgrounds (including \textbf{Det.} + \textbf{Lab.} + \textbf{Cosmo.} + \textbf{Surf.}) and radon emanation rates. A PLR analysis was constructed, and the SI WIMP cross section at a 90\% confidence level was evaluated for WIMP masses ranging from 5 GeV/c\squared{} up to 20,000 GeV/c\squared{}. The best projected sensitivity achieved for the toy G3 detector with the assumed background scaling and an exposure of 300 tonne $\times$ years was $1.2\times10^{-49} \; \MathText{cm}^{2}$ for a WIMP mass of 40 GeV/c\squared{}. With this sensitivity, the remaining parameter space that G2 experiments will fail to examine above the coherent scattering of neutrinos from astrophysical sources is comfortably reached.
 
-The advancement in dual-phase LXe technologies in detecting ultra-rare events made possible the search the the most elusive particle known to mankind. With further improvements, it is possible for this technology to transition into a rare event search observatory; looking for dark matter particles at much lower energies, while also becoming competitive in \neutrinolessDoubleBeta and the astrophysical neutrino landscape. Although the NR background rates are below one event for the entirety of a planned science run, the ER rates, which impact both the WIMP search and any ER-related physic search, still remain relatively high. The biggest contribution is coming from the material-induced radon emanation. To better understand this background, measure the temperature dependence of radon emanation across different detector material; and develop techniques to reduce radon diffusion, a cryogenic radon emanation facility has been envisioned and under construction. The CREF facility will be used to model this background more accurately and precisely to achieve the ambitions set for a G3 observatory. A future detector with sub-dominant radon emanation will be able to probe new dark matter models in the ER band of the spectrum, while also expanding the scientific outreach of this technology beyond dark matter.
+The advancement in dual-phase LXe technologies in detecting ultra-rare events made possible the search the the most elusive particle known to mankind. With further improvements, it is possible for this technology to transition into a rare event search observatory; looking for dark matter particles at much lower energies, while also becoming competitive in \neutrinolessDoubleBeta{} and the astrophysical neutrino landscape. Although the NR background rates are below one event for the entirety of a planned science run, the ER rates, which impact both the WIMP search and any ER-related physic search, still remain relatively high. The biggest contribution is coming from the material-induced radon emanation. To better understand this background, measure the temperature dependence of radon emanation across different detector materials, and develop techniques to reduce radon diffusion, a cryogenic radon emanation facility has been envisioned and under construction. The CREF facility will be used to model this background more accurately and precisely to achieve the ambitions set for a G3 observatory. A future detector with sub-dominant radon emanation will be able to probe new dark matter models in the ER band of the spectrum, while also expanding the scientific outreach of this technology beyond dark matter.
 
 \\
