--- a/mythesis.bib
+++ b/mythesis.bib
@@ -759,7 +759,7 @@
 
 %% Local speed of sun
 @article{Bovy_2012,
-   title={THE MILKY WAY’S CIRCULAR-VELOCITY CURVE BETWEEN 4 AND 14 kpc FROM APOGEE DATA},
+   title={The milky way’s circular-velocity curve between 4 and 14 kpc from apogee data},
    volume={759},
    ISSN={1538-4357},
    url={http://dx.doi.org/10.1088/0004-637X/759/2/131},
@@ -1587,6 +1587,22 @@ author = "Keiko Fujii and Yuya Endo and Yui Torigoe and Shogo Nakamura and Tomiy
    pages={111–126}
 }
 
+%% The LZ experiment
+@article{Akerib:2019fml,
+    author = "Akerib, D.S. and others",
+    collaboration = "LZ",
+    title = "{The LUX-ZEPLIN (LZ) Experiment}",
+    eprint = "1910.09124",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    reportNumber = "FERMILAB-PUB-19-555-AE-E",
+    doi = "10.1016/j.nima.2019.163047",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "953",
+    pages = "163047",
+    year = "2020"
+}
+
 %% LZ Titanium
 @article{LZ_titanium_selection,
    title={Identification of radiopure titanium for the LZ dark matter experiment and future rare event searches},
@@ -1905,13 +1921,19 @@ author = "M. Yeh and A. Garnov and R.L. Hahn",
 }
 
 %% LZ Screening Paper
-@misc{lz_screening,
-    title={The LUX-ZEPLIN (LZ) radioactivity and cleanliness control programs},
-    author={D. S. Akerib and C. W. Akerlof and D. Yu. Akimov and A. Alquahtani and S. K. Alsum and T. J. Anderson and N. Angelides and H. M. Araújo and A. Arbuckle and J. E. Armstrong and M. Arthurs and H. Auyeung and S. Aviles and X. Bai and A. J. Bailey and J. Balajthy and S. Balashov and J. Bang and M. J. Barry and D. Bauer and P. Bauer and A. Baxter and J. Belle and P. Beltrame and J. Bensinger and T. Benson and E. P. Bernard and A. Bernstein and A. Bhatti and A. Biekert and T. P. Biesiadzinski and H. J. Birch and B. Birrittella and K. E. Boast and A. I. Bolozdynya and E. M. Boulton and B. Boxer and R. Bramante and S. Branson and P. Brás and M. Breidenbach and C. A. J. Brew and J. H. Buckley and V. V. Bugaev and R. Bunker and S. Burdin and J. K. Busenitz and R. Cabrita and J. S. Campbell and C. Carels and D. L. Carlsmith and B. Carlson and M. C. Carmona-Benitez and M. Cascella and C. Chan and J. J. Cherwinka and A. A. Chiller and C. Chiller and N. I. Chott and A. Cole and J. Coleman and D. Colling and R. A. Conley and A. Cottle and R. Coughlen and G. Cox and W. W. Craddock and D. Curran and A. Currie and J. E. Cutter and J. P. da Cunhaw and C. E. Dahl and S. Dardin and S. Dasu and J. Davis and T. J. R. Davison and L. de Viveiros and N. Decheine and A. Dobi and J. E. Y. Dobson and E. Druszkiewicz and A. Dushkin and T. K. Edberg and W. R. Edwards and B. N. Edwards and J. Edwards and M. M. Elnimr and W. T. Emmet and S. R. Eriksen and C. H. Faham and A. Fan and S. Fayer and S. Fiorucci and H. Flaecher and I. M. Fogarty Florang and P. Ford and V. B. Francis and E. D. Fraser and F. Froborg and T. Fruth and R. J. Gaitskell and N. J. Gantos and D. Garcia and V. M. Gehman and R. Gelfand and J. Genovesi and R. M. Gerhard and C. Ghag and E. Gibson and M. G. D. Gilchriese and S. Gokhale and B. Gomber and T. G. Gonda and A. Greenall and S. Greenwood and G. Gregerson and M. G. D. van der Grinten and C. B. Gwilliam and C. R. Hall and D. Hamilton and S. Hans and K. Hanzel and T. Harrington and A. Harrison and J. Harrison and C. Hasselkus and S. J. Haselschwardt and D. Hemer and S. A. Hertel and J. Heise and S. Hillbrand and O. Hitchcock and C. Hjemfelt and M. D. Hoff and B. Holbrook and E. Holtom and J. Y-K. Hor and M. Horn and D. Q. Huang and T. W. Hurteau and C. M. Ignarra and M. N. Irving and R. G. Jacobsen and O. Jahangir and S. N. Jeffery and W. Ji and M. Johnson and J. Johnson and P. Johnson and W. G. Jones and A. C. Kaboth and A. Kamaha and K. Kamdin and V. Kasey and K. Kazkaz and J. Keefner and D. Khaitan and M. Khaleeq and A. Khazov and A. V. Khromov and I. Khurana and Y. D. Kim and W. T. Kim and C. D. Kocher and D. Kodroff and A. M. Konovalov and L. Korley and E. V. Korolkova and M. Koyuncu and J. Kras and H. Kraus and S. W. Kravitz and H. J. Krebs and L. Kreczko and B. Krikler and V. A. Kudryavtsev and A. V. Kumpan and S. Kyre and A. R. Lambert and B. Landerud and N. A. Larsen and A. Laundrie and E. A. Leason and H. S. Lee and J. Lee and C. Lee and B. G. Lenardo and D. S. Leonard and R. Leonard and K. T. Lesko and C. Levy and J. Li and Y. Liu and J. Liao and F. -T. Liao and J. Lin and A. Lindote and R. Linehan and W. H. Lippincott and R. Liu and X. Liu and C. Loniewski and M. I. Lopes and E. Lopez-Asamar and B. López Paredes and W. Lorenzon and D. Lucero and S. Luitz and J. M. Lyle and C. Lynch and P. A. Majewski and J. Makkinje and D. C. Malling and A. Manalaysay and L. Manenti and R. L. Mannino and N. Marangou and D. J. Markley and P. MarrLaundrie and T. J. Martin and M. F. Marzioni and C. Maupin and C. T. McConnell and D. N. McKinsey and J. McLaughlin and D. -M. Mei and Y. Meng and E. H. Miller and Z. J. Minaker and E. Mizrachi and J. Mock and D. Molash and A. Monte and M. E. Monzani and J. A. Morad and E. Morrison and B. J. Mount and A. St. J. Murphy and D. Naim and A. Naylor and C. Nedlik and C. Nehrkorn and H. N. Nelson and J. Nesbit and F. Neves and J. A. Nikkel and J. A. Nikoleyczik and A. Nilima and J. O'Dell and H. Oh and F. G. O'Neill and K. O'Sullivan and I. Olcina and M. A. Olevitch and K. C. Oliver-Mallory and L. Oxborough and A. Pagac and D. Pagenkopf and S. Pal and K. J. Palladino and V. M. Palmaccio and J. Palmer and M. Pangilinan and N. Parveen and S. J. Patton and E. K. Pease and B. P. Penning and G. Pereira and C. Pereira and I. B. Peterson and A. Piepke and S. Pierson and S. Powell and R. M. Preece and K. Pushkin and Y. Qie and M. Racine and B. N. Ratcliff and J. Reichenbacher and L. Reichhart and C. A. Rhyne and A. Richards and Q. Riffard and G. R. C. Rischbieter and J. P. Rodrigues and H. J. Rose and R. Rosero and P. Rossiter and R. Rucinski and G. Rutherford and J. S. Saba and L. Sabarots and D. Santone and M. Sarychev and A. B. M. R. Sazzad and R. W. Schnee and M. Schubnell and P. R. Scovell and M. Severson and D. Seymour and S. Shaw and G. W. Shutt and T. A. Shutt and J. J. Silk and C. Silva and K. Skarpaas and W. Skulski and A. R. Smith and R. J. Smith and R. E. Smith and J. So and M. Solmaz and V. N. Solovov and P. Sorensen and V. V. Sosnovtsev and I. Stancu and M. R. Stark and S. Stephenson and N. Stern and A. Stevens and T. M. Stiegler and K. Stifter and R. Studley and T. J. Sumner and K. Sundarnath and P. Sutcliffe and N. Swanson and M. Szydagis and M. Tan and W. C. Taylor and R. Taylor and D. J. Taylor and D. Temples and B. P. Tennyson and P. A. Terman and K. J. Thomas and J. A. Thomson and D. R. Tiedt and M. Timalsina and W. H. To and A. Tomás and T. E. Tope and M. Tripathi and D. R. Tronstad and C. E. Tull and W. Turner and L. Tvrznikova and M. Utes and U. Utku and S. Uvarov and J. Va'vra and A. Vacheret and A. Vaitkus and J. R. Verbus and T. Vietanen and E. Voirin and C. O. Vuosalo and S. Walcott and W. L. Waldron and K. Walker and J. J. Wang and R. Wang and L. Wang and W. Wang and Y. Wang and J. R. Watson and J. Migneault and S. Weatherly and R. C. Webb and W. -Z. Wei and M. While and R. G. White and J. T. White and D. T. White and T. J. Whitis and W. J. Wisniewski and K. Wilson and M. S. Witherell and F. L. H. Wolfs and J. D. Wolfs and D. Woodward and S. D. Worm and X. Xiang and Q. Xiao and J. Xu and M. Yeh and J. Yin and I. Young and C. Zhang and P. Zarzhitsky},
-    year={2020},
-    eprint={2006.02506},
-    archivePrefix={arXiv},
-    primaryClass={physics.ins-det}
+@article{lz_screening,
+    author = "Akerib, D.S. and others",
+    collaboration = "LZ",
+    title = "{The LUX-ZEPLIN (LZ) radioactivity and cleanliness control programs}",
+    eprint = "2006.02506",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    doi = "10.1140/epjc/s10052-020-8420-x",
+    journal = "Eur. Phys. J. C",
+    volume = "80",
+    number = "11",
+    pages = "1044",
+    year = "2020"
 }
 
 %% Primordial Radionuclide Chain Disequilibrium
@@ -2157,7 +2179,7 @@ year = {1997}
 %
 @article{PARTINGTON1957,
     abstract = {THE books on radioactivity and physics agree in attributing the discovery of radium emanation to E. or F. Dorn, giving as a reference either Abhl. Naturf. Ges. Halle (1900) or (such as “Geiger and Scheel” and “Wien-Harms”) the same publication, 22, 155 (1900). Mellor adds, “E. Dorn, Ueber die von radioaktiven Substanzen ausgesandte Emanation, Stuttgart, 1900”. The volume of the Abhandlungen der Naturforschenden Gesellschaft zu Halle mentioned, namely, 22, is dated 1900–1, and p. 155 is in the middle of a long article on the flora of Scandinavia.},
-    author = {PARTINGTON, J R},
+    author = {Partington, J R},
     doi = {10.1038/179912a0},
     issn = {1476-4687},
     journal = {Nature},
@@ -2178,7 +2200,7 @@ year = {1997}
 %% SECTION 4.2 %%
 %
 @article{radon_emanation_modeling,
-    author = {Sakoda, Akihiro and ISHIMORI, Yuu},
+    author = {Sakoda, Akihiro and Ishimori, Yuu},
     year = {2017},
     month = {01},
     pages = {296-306},
@@ -2310,6 +2332,18 @@ year = {1997}
     author = "G. Zuzel and H. Simgen",
     keywords = "Radon, Low activity measurements, Proportional counters",
     abstract = "The presented radon detection technique employs miniaturized ultra-low background proportional counters. 222Rn samples are purified, mixed with a counting gas and filled into a counter using a special glass vacuum line. The absolute sensitivity of the system is estimated to be 40μBq (20 222Rn atoms). For emanation investigations two metal sealed stainless steel vessels and several glass vials are available. Taking into account their blank contributions, measurements at a minimum detectable activity of about 100μBq can be performed."
+}
+
+%% Radon emanation studies from XENON1T
+@article{Aprile:2020vmn,
+    author = "Aprile, E. and others",
+    collaboration = "XENON",
+    title = "{$^{222}$Rn emanation measurements for the XENON1T experiment}",
+    eprint = "2009.13981",
+    archivePrefix = "arXiv",
+    primaryClass = "physics.ins-det",
+    month = "9",
+    year = "2020"
 }
 
 %% EXO radon studies – for cross-calibration results
