--- a/Frontmatter/frontmatter.tex
+++ b/Frontmatter/frontmatter.tex
@@ -30,43 +30,89 @@
 
 %%-----Abstract
 \begin{abstract}
-\end{abstract}
-\bigskip
 \vspace{-0.8cm}
-The existence of dark matter is now supported by a wide range of physical observations, ranging from galactic to cosmological scales. Our best cosmological models predict dark matter to make up 85\% of the matter-content of the universe. One of the leading particle candidates that can effectively explain cosmological observations is the Weakly Interacting Massive Particles (WIMPS), the presence of which can be directly searched for by rare-event underground experiments via its scattering off atomic nuclei. By deploying a multi-tonne dual-phase liquid xenon (LXe) detector, the LUX-ZEPLIN (LZ) experiment, currently under construction in the Davis Campus at the Sanford Underground Research Facility (South Dakota, USA), is projected to reach unprecedented sensitivities in search for WIMPs.
 
-In probing deeper into the WIMP landscape, an extensive screening and cleanliness campaign was envisioned, selecting some of the most radio-pure material for the construction of LZ. This work highlights some of the cutting-edge techniques used in modeling for a wide range of backgrounds, focusing primarily on measuring and modeling the radon emanation background projections. By using the LZ simulation and statistical inference frameworks, the impact of radon emanation across different background scenarios ate examined, where the 90\% CL sensitively is determined to very from $1.34\times10^{-48} \; \MathText{cm}^{2}$ to $1.76\times10^{-48} \; \MathText{cm}^{2}$ at radon activities of 11.0 mBq and 60.4 mBq, respectively---remaining well below LZ requirement of $3.0\times10^{-48} \; \MathText{cm}^{2}$. Furthermore, the projected LZ sensitivity for a WIMP mass of 40 GeV/c\squared{}, at a 90\% CL and the 3\sigma discovery potential was determined to be $1.43\times10^{-48} \; \MathText{cm}^{2}$ and $3.4\times10^{-48} \; \MathText{cm}^{2}$.
+The existence of dark matter is now supported by a wide range of physical observations, ranging from galactic to cosmological scales. Our best cosmological models predict dark matter to make up 85\% of the matter-content of the universe. One of the leading particle candidates that can effectively explain cosmological observations is the Weakly Interacting Massive Particles (WIMPS), the presence of which can be directly searched for by rare-event underground experiments via its scattering off atomic nuclei. By deploying a multi-tonne dual-phase liquid xenon (LXe) detector, the LUX-ZEPLIN (LZ) experiment, currently under construction in the Davis Campus at the Sanford Underground Research Facility (SURF) (South Dakota, USA) is projected to reach unprecedented sensitivities in search for WIMPs.
 
-The projected limits from second-generation detectors leave a significant amount of the parameter space prior to the cosmic neutrino floor ($\sim10^{-49} \; \MathText{cm}^{2}$) unexplored. In envisioning what a future third-generation detector may hold and examine the background necessities of such detector, a toy G3 experiment is presented and a cryogenic radon facility currently under construction is outlined to pave the way for a dual-phase LXe observatory.
+In probing deeper into the WIMP landscape, an extensive screening and cleanliness campaign was envisioned, selecting some of the most radio-pure material for the construction of LZ. This work highlights some of the cutting-edge techniques used in understanding and modelling a wide range of backgrounds, focusing primarily on measuring and modeling the radon emanation background projections. By using the LZ simulation and statistical inference frameworks, the impact of radon emanation across different background scenarios are examined, where the 90\% CL sensitively is determined to vary from $1.34\times10^{-48} \; \MathText{cm}^{2}$ to $1.76\times10^{-48} \; \MathText{cm}^{2}$ at radon activities of 11.0 mBq and 60.4 mBq, respectively---remaining well below LZ requirement of $3.0\times10^{-48} \; \MathText{cm}^{2}$. The projected LZ sensitivity for a WIMP mass of 40 GeV/c\squared{}, at a 90\% CL and the 3\sigma discovery potential was determined to be $1.43\times10^{-48} \; \MathText{cm}^{2}$ and $3.4\times10^{-48} \; \MathText{cm}^{2}$.
+
+The projected limits from second-generation detectors, such as LZ and XENONnT leave a significant amount of the parameter space prior to the cosmic neutrino floor ($\sim10^{-49} \; \MathText{cm}^{2}$) unexplored. In envisioning what a future third-generation (G3) detector may hold and examine the background necessities of such a detector, a toy G3 experiment is presented. A cryogenic radon facility currently under construction is outlined to pave the way for achieving the background requirements of a G3 dual-phase LXe observatory.
+
+\end{abstract}
+
+
+%%-----Impact Statement
+\begin{impactstatement}
+
+One of the hot topics of physics in the twenty-first century is the dark matter conundrum; its implications for the structure formation of the universe, and its connection to the standard model of elementary particles. Upon operation, the LUX-ZEPLIN (LZ) experiment will be the largest and most sensitive dark matter detector on earth, looking for weak interactions massive particles (WIMPs)—one of the leading candidates for dark matter. Reaching ever-so-sensitive domains of the WIMP parameter space arises new experimental challenges. These challenges range from engineering to simulating, characterising, and modelling of signal and background events, to optimise detector design, constructional approaches and science reach.  
+
+The work presented in this thesis incorporates a broad extent of research, spanning from measurements of radio-contaminants of the LZ experiment to simulating the detector operations and statistical modelling of the WIMP search. The results highlighted in this thesis were especially impactful in understanding the radon emanation background of LZ, the expected emanation rate in operation and the impact of the radon background for the WIMP search. Furthermore, as part of an R&D process, a cold radon emanation facility (CREF) was developed to measure radon backgrounds for low-background experiments across a multitude of materials and temperatures—the outcome of which will be immense for the next-generation experiments beyond LZ. The CREF project has already become a new ground of research for upcoming PhD students and postdoctoral fellows. 
+
+Beyond academia, radiation detection is of great importance for humanity and especially for public health. Airbourne radon is reported to be the second leading cause of lung cancer. The technology developed as part of this research may further be developed to measure and characterise radon levels of our surrounding to improve the quality of our environments and life.
+
+\end{impactstatement}
 
 
 %%-----Acknowledgements
 \begin{acknowledgements}
 
-I thank myself for somehow managing to write an entire thesis and apologise to myself for making it difficult in any and all events of the past.
+There are many people that have played a significant role in shaping, guiding and accompanying my journey as I have navigated the terrains of life, started out in a rural hamlet in Turkey, and lead me to this moment of time. I am grateful for all of those, that one way or another, have came across my path and facilitated the completion of my PhD thesis. However, I would like to acknowledge a few of those individuals, without whom, the completion of this thesis wouldn't have been possible.
+
+Firstly, I would like to extend my deepest gratitude to my supervisor and dear friend, Chamkaur Ghag, for convincing and giving me the opportunity to undertake this research. I am eternally grateful for his support, assistance, guidance and wisdom throughout. His supervision and friendship has guided me in ways unimaginable. I further extend this gratitude to Jim Dobson, a phenomenal human being and a colleague. I am extremely grateful to have had the opportunity to work with him closely and thank him for his eternal patience throughout the years.
+
+I'd like to thank all of the members of the LZ collaboration, whose dedication, hard work and togetherness, not only has made this project a success; but has motivated, inspired and facilitated many invaluable experiences. I'd like to extend my gratitude to those I have worked closely over the years, namely, Sally S., Ibles O., Theresa F., Amy C., Alvine, K., Markus H., Tomasz B., Paul S., Xin L., Alfredo T., and Hans Kraus. I would also like to extend my special thanks to Kevin Lesko, Hugh Lippincott, and Henrique Araujo, for their support, guidance, expertise and trust.
+
+The time I have spent at UCL has been phenomenally rewarding in both personal and professional development and I'd like to thank all the dear members of the particle physics family. Throughout the years I have had many discussions whether in person or during the Friday pub visits, which has undoubtedly added colour to my years at UCL. My special thanks go to all of my colleagues in our UCLDM group and friends in D109, and in particular, Ricky N., Sebastian B., Joanna. H., David Y., and Caishan Q. I'd like to extend my special gratitude's to Ruben Saakyan for all his assistance, especially with regards the radon emanation work.
+
+Finally, I'd like to show my gratitude to my friends, family and loved ones. To Vasilis K., Deshan A., Nellie M., and Nicolas A., whose friendships has helped me countless times; thank you for trusting and loving me and for all the good times. And to my mother, farther,  sisters and cousins, all of whom have been a fundamental part of my life.
+
+\vspace*{1cm}
+\begin{flushright}
+    With infinite Love, \\
+    Umit Utku
+\end{flushright}
 
 \end{acknowledgements}
 
 
 %%-----Declaration
 \begin{declaration}
-  This dissertation is the result of my own work, except where explicit
-  reference is made to the work of others, and has not been submitted
-  for another qualification to this or any other university. This
-  dissertation does not exceed the word limit for the respective Degree
-  Committee.
-  \vspace*{1cm}
-  \begin{flushright}
-    Umit Utku
-  \end{flushright}
+I hereby declare that this dissertation is the result of my own work, except where an explicit reference is made to the work of others in an effort to broaden and offer an in-depth description for the reader. The following will highlight the chapters of this thesis, specifying my contributions to the broader work that makes up the entirety of this thesis.
+  
+Chapter (\ref{chap:chap1}) is an introductory overview of the modern cosmological paradigm, referring to may publications to detail the theory and experimentation in our search for dark matter. 
+  
+Chapter (\ref{chap:chap2}) introduces the background to dark matter detection with dual-phase liquid xenon technology and the LUX-ZEPLIN experiment. It builds on past and present literature both from the wider community and work done by the LZ collaboration. A significant amount of my PhD was spend constructing parts of the detector, focused primarily on the cleanliness of the LZ inner cryostat vessel, assembly of the bottom skin PMT array and supervision of various other assembly, quality control and assurance procedures. A significant chance in the cleanliness protocols of the Surface Underground Laboratory (SAL) were adopted as a direct consequence of my work out at SURF.
+  
+Chapter (\ref{chap:chap3}) highlights the radiogenic backgrounds in LZ and our approach in screening and selecting appropriate materials for the detector. Furthermore, the chapter details work done on determining the \gamma{}-ray background of Davis cavern. My contributions were towards developing some of the cleanliness protocols under which the detector was constructed and co-authoring the screening paper that summarised the efforts of the collaboration \cite{lz_screening}. Moreover, I contributed towards the data-taking and pre-processing and analysis of the \gamma{}-ray data from Davis cavern measurements; however, there were a group of collaborators involved in this expedition, which resulted in \cite{Akerib_2020_gray_measurements}.
+  
+Chapter (\ref{chap:chap4}) details the radon emanation background in LZ and screening efforts in selecting material and modeling this background for the WIMP search. My contributions were predominantly through operating the UCL radon emanation system and screening materials for LZ. Furthermore, was held responsible for collating all radon related results by the collaboration to estimate the total radon emanation background, which is the dominant background in LZ. Many of the measurements mentioned in this chapter, especially the large scale backgrounds were conducted by other collaborators in a co-operative manner. 
+  
+Chapter (\ref{chap:chap5}) introduces the LZ simulation and statistical framework. My contributions involved the developmental work for \textsc{BACCARAT} in coding geometrical changes and I also worked alongside a collaborator to write and develop parts of the \textsc{LZstats} framework. I then used these tools to study the statistical implications of various backgrounds in LZ, with an emphasis on the radon background and the final LZ sensitivity and discovery potential for the spin-independent WIMP analysis.
+  
+Chapter (\ref{chap:chap6}) looks into future of dual-phase liquid xenon technology, envisioning the capacity of a G3 dark matter experiment. I used the \textsc{LZstats} framework and the background expectations for an LZ-like experiment to calculate the sensitivity of a 70 tonne experiment with a 300 tonne$\cdot$year exposure.  
+  
+Chapter (\ref{chap:chap7}) introduces the necessity of the Cold Radon Emanation Facility (CREF), currently developed at RAL. My contributions for this chapter are the design, being constructed and procurement of the gas system that will be used for CREF and in leading the CREF team to finalise the laboratory.    
+  
+\vspace*{1cm}
+\begin{flushright}
+Umit Utku
+\end{flushright}
+
+\begin{flushright}
+October, 2020
+\end{flushright}
+
 \end{declaration}
+
 
 %% Contents page
 \tableofcontents
 
+
 %% Adding figures and tables list
 \listoffigures
 \listoftables
+
 
 %% Strictly optional!
 \frontquote{%
